# glaucoma

./: .gitignore  .platform.app.yaml  app.py  build.sh  main.py  model.py  pyproject.toml  requirements.txt  setup.py  vercel.json
data/MODEL_WEIGHTS/: classifier3.pth  classifier_noaug_new.pth
data/MODEL_WEIGHTS/drishtigs/: generator_cup_noaug_new.pth  generator_disc_noaug_new.pth
